--- a/src/components/WeatherLocation/WeatherData/styles.css
+++ b/src/components/WeatherLocation/WeatherData/styles.css
@@ -1,10 +1,12 @@
 
 .weatherDataCont {
     background-color: rgba(200, 200, 200, 0.5);
-    width: 400px;
+    width: 100%;
     height: 100px;
     line-height: 100px;
     border-radius: 5px;
+    padding: 5px;
+    box-sizing: border-box;
 }
 
 .weatherExtraInfoCont {
@@ -20,7 +22,7 @@
 }
 
 .temperature {
-    font-size: 30px;
+    font-size: 28px;
     font-weight: bold;
     padding-left: 20px;
     color: #333;
@@ -39,6 +41,6 @@
 }
 
 .wicon {
-    margin-top: 15px;
+    margin: 15px;
     color: lightcoral;
 }
